--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,48 @@
 .container {
     font-family: Arial, sans-serif;
     padding: 20px;
+    background-color: #0f0;
+    color: #ffff00;
+}
+.cabecalho {
+    display: flex;
+    flex-direction: column;
+    background-color: #0a0;
+    justify-content: center;
+    align-items: center;
+}
+.header {
+    color: #00f;
+    font-size: 32px;
+    font-weight: bold;
+}
+.subtitle {
+    color: #fff;
+}
+.conteudo{
+    background-color: azure;
+    color: #00ffff;
+}
+
+/* Desafio 1 */
+
+.conteudo p {
+    color: #E4005A;
+    font-size: 42px;
+}
+
+/* Desafio 2 */
+.conteudo p:nth-child(3) {
+    color: purple;
+    vertical-align: sub;
+    font-size: smaller;
+
+}
+
+/* Desafio 3 */
+
+@media(max-width: 480px) {
+    .container {
+        background-color: #ADD8E6;
+    }
 }
